--- a/learn-react-ts/connect-four-game/my-app/package.json
+++ b/learn-react-ts/connect-four-game/my-app/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.12.29",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/uuid": "^7.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
