--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /learn-react-ts/connect-four-game/my-app/node_modules
 /learn-react-ts/test-api/node_modules
 /learn-react-ts/dynamic-app-prac/node_modules
+/learn-react-ts/nav-test/node_modules
 /.pnp
 .pnp.js
 /.vscode
